actulaiza campo actividad en partidos
